# e-zgui

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h
styles/: style.qss
